TODO
* fix issue with multi threaded read test
  - store descriptor initialization?
* add error tolerance for missing NTFS backup volume header
* pyvshadow
  - work on store
* remove hard coded 0x4000 block size
  - use or pass io handle block size instead
* add tests
  - create test image
  - create test plan
  - test and add ignore overlay when reading from next store
* multi-threading support
  - what about abort value?
* beta
  - fix open issues
* add libfdata and libfcache for caching ?

API:
* allow access to block list
  - finish and expose libvshadow_store_get_block()
  - split block list and run-time btree
* get operating machine string
* get service machine string
* get size
* is open
* finish store close function

Error tollerance:
* add support for catalog entry 3 defined before 2

Format:
* how are multiple copies per set stored?
* the store file can be fragmented
  - block range list defines the fragments ?
* what about trailing volume data that windows is hiding 0x1000 bytes in size ?
  also seen in BDE, so likely something of NTFS

Tools:
* vshadowexport
  - create tool to export a VSS volume ?
* vshadowinfo
  - print attribute flags description
* vshadowmount
  - dokan fix volume size hints

20140325
* worked on setup.py

20140323
* worked on Python bindings

20140131
* 2014 update
* updated dependencies

20131211
* worked on Python bindings

20131209
* worked on Python bindings
  - changed return value check of libvshadow_store_read_buffer to allow for
    non read size valid read count values

20131203
* worked on Python bindings
  - subtle bug fix where python file-like object returns an int object
    instead of long object
  - improved error reporting
* updated libcerror

20131003
* updated dependencies
* worked on setup.py, largely for MSI builds
* updated msvscpp files

20130723
* fixes for 32-bit WINAPI build of pyvshadow in file object glue code

20130721
* Changes for stand-alone libbfio build
* updated msvscpp files

20130718