@@ -328,6 +328,20 @@ ssize_t libvshadow_store_read_buffer_from_file_io_handle(
  * Returns the number of bytes read or -1 on error
  */
 LIBVSHADOW_EXTERN \
+ssize_t libvshadow_store_read_buffer_at_offset(
+         libvshadow_store_t *store,
+         void *buffer,
+         size_t buffer_size,
+         off64_t offset,
+         libvshadow_error_t **error );
+
+/* Reads (store) data at a specific offset
+ * Returns the number of bytes read or -1 on error
+ *
+ * This function is deprecated use libvshadow_store_read_buffer_at_offset instead
+ */
+LIBVSHADOW_DEPRECATED \
+LIBVSHADOW_EXTERN \
 ssize_t libvshadow_store_read_random(
          libvshadow_store_t *store,
          void *buffer,
