@@ -149,6 +149,45 @@ int libvshadow_io_handle_free(
 	return( 1 );
 }
 
+/* Clears the IO handle
+ * Returns 1 if successful or -1 on error
+ */
+int libvshadow_io_handle_clear(
+     libvshadow_io_handle_t *io_handle,
+     libcerror_error_t **error )
+{
+	static char *function = "libvshadow_io_handle_clear";
+
+	if( io_handle == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_ARGUMENTS,
+		 LIBCERROR_ARGUMENT_ERROR_INVALID_VALUE,
+		 "%s: invalid IO handle.",
+		 function );
+
+		return( -1 );
+	}
+	if( memory_set(
+	     io_handle,
+	     0,
+	     sizeof( libvshadow_io_handle_t ) ) == NULL )
+	{
+		libcerror_error_set(
+		 error,
+		 LIBCERROR_ERROR_DOMAIN_MEMORY,
+		 LIBCERROR_MEMORY_ERROR_SET_FAILED,
+		 "%s: unable to clear IO handle.",
+		 function );
+
+		return( -1 );
+	}
+	io_handle->block_size = 0x4000;
+
+	return( 1 );
+}
+
 /* Reads the NTFS volume header
  * Returns 1 if successful, 0 if no usable header was found or -1 on error
  */
